# nyc-rental-price-mcp

./: (Note)  .code_planner_cache.db  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  PROJECT_BUILD_NOTES.md  PROJECT_STRUCTURE_CLEANUP.md  PROJECT_STRUCTURE_IMPROVEMENTS.md  README.md  ROADMAP.md  api.py  change_applier_cache.db  model.py  preprocessing.py  pyproject.toml  requirements.txt  run_pipeline.sh  scraper.py  setup.py  setup_demo.py  train_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml  python-ci.yml
data/interim/: .gitkeep
docs/: README.md  git_workflow.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
models/: best_mcp_model.h5
notebooks/: nyc_rental_price_demo.ipynb
src/api/: __init__.py
src/app/: __init__.py
src/data/: scraper.py
src/data_processing/: __init__.py
src/models/: __init__.py
src/nyc_rental_price/: __init__.py  main.py
src/nyc_rental_price/api/: __init__.py  api.py  main.py
src/nyc_rental_price/data/: __init__.py  preprocessing.py  scrape_listings.py  scraper.py
src/nyc_rental_price/data/scrapers/: __init__.py  base.py  craigslist.py  streeteasy.py  zillow.py
src/nyc_rental_price/examples/: README.md  __init__.py  advanced_model_training.py  generate_sample_data.py
src/nyc_rental_price/features/: __init__.py  distance.py  encoder.py  neighborhood.py  pipeline.py  temporal.py  text.py
src/nyc_rental_price/models/: __init__.py  model.py  model.py.20250331_014150.bak  train.py  train_test.py
tests/: conftest.py  test_model.py  test_preprocessing.py  test_scraper.py
tests/integration/: test_model.py  test_pipeline.py  test_preprocessing.py  test_setup.py
tests/integration/tests/integration/: test_model.py
tests/performance/: test_performance.py  test_performance_fixed.py
tests/unit/: test_model.py  test_preprocessing.py  test_scraper.py
